--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
                             <p class="timeline-event-thumbnail">Janvier 2024 - Février 2024</p>
-                            <h3>Stage de Développemnt Web</h3>
+                            <h3>Stage de Développement Web</h3>
 
                             <p>
                                 <br>J’ai eu l'opportunité d'executer plusieurs missions durant
