--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <div class="timeline-event-copy">
                             <p class="timeline-event-thumbnail">Janvier 2024 - Février 2024</p>
                             <h3>Stage de Développement Web</h3>
-
+                            <h4>JS Energie </h4>
                             <p>
                                 <br>J’ai eu l'opportunité d'executer plusieurs missions durant
                                 mon stage dont deux qui m’ont particulièrement permis de développer mes compétences.
